Use weak references for listener lists, closes #85